# derivative-parsing

./: .gitignore  README.md  derivative-parsing.cabal  stack.yaml
bench/: Main.hs
space/: Main.hs
src/Control/Higher/: Applicative.hs  Comonad.hs  Monad.hs
src/Control/Higher/Comonad/: Cofree.hs
src/Control/Higher/Monad/: Free.hs
src/Data/: Graph.hs  Memo.hs  Pattern.hs  Predicate.hs
src/Data/Functor/: Const.hs  Eq.hs  K.hs  Monoid.hs  Show.hs
src/Data/Higher/: Bifunctor.hs  Copointed.hs  Eq.hs  Fix.hs  Foldable.hs  Function.hs  Functor.hs  Graph.hs  Isofunctor.hs  Monoid.hs  Pointed.hs  Product.hs  Profunctor.hs  Sum.hs  Transformation.hs  Traversable.hs
src/Data/Higher/Functor/: Eq.hs  Fix.hs  Foldable.hs  Identity.hs  Recursive.hs  Show.hs
src/Data/Pattern/: Char.hs
src/Derivative/: Lexer.hs  Parser.hs
src/Derivative/Parser/: Char.hs
test/: Spec.hs
test/Data/Pattern/Char/: Spec.hs
test/Derivative/Lexer/: Spec.hs
test/Derivative/Parser/: Spec.hs
test/Derivative/Parser/Char/: Spec.hs
time/: Main.hs
