name:                derivative-parsing
version:             0.0.0.1
synopsis:            Parsers
description:         Please see README.md
homepage:            http://github.com/robrix/derivative-parsing#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Const
                     , Data.Higher.Foldable
                     , Data.Higher.Functor
                     , Data.Higher.Functor.Eq
                     , Data.Higher.Functor.Show
                     , Data.Higher.Graph
                     , Data.Higher.Monoid
                     , Data.Higher.Transformation
                     , Derivative.Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-unused-binds
                       -fno-warn-name-shadowing

executable derivative-parsing
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , derivative-parsing
  default-language:    Haskell2010

test-suite derivative-parsing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Derivative.Parser.Spec
  build-depends:       base
                     , derivative-parsing
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/derivative-parsing
