name:                derivative-parsing
version:             0.0.0.1
synopsis:            Parsers
description:         Please see README.md
homepage:            http://github.com/robrix/derivative-parsing#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Higher.Foldable
                     , Data.Higher.Functor
                     , Data.Higher.Functor.Eq
                     , Data.Higher.Functor.Recursive
                     , Data.Higher.Functor.Show
                     , Data.Higher.Graph
                     , Data.Higher.Transformation
                     , Data.Higher.Traversable
                     , Data.Pattern
                     , Data.Predicate
                     , Derivative.Lexer
                     , Derivative.Parser
                     , Derivative.Parser.Char
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

executable derivative-parsing
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , derivative-parsing
  default-language:    Haskell2010

test-suite derivative-parsing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Derivative.Parser.Char.Spec
                     , Derivative.Parser.Spec
  build-depends:       base
                     , derivative-parsing
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

benchmark derivative-parsing-time
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      time
  build-depends:       base
                     , criterion
                     , derivative-parsing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -j -O2 -static
                       -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

benchmark derivative-parsing-space
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      space
  build-depends:       base
                     , deepseq
                     , derivative-parsing
                     , weigh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -j -O2 -static
                       -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/derivative-parsing
